Markup color fix
Change the logic for how markups should be displayed

--- a/index.html
+++ b/index.html
@@ -188,6 +188,40 @@
         .text-loss {
             color: #ff5252 !important; /* Brighter red */
         }
+
+        /* Update the color classes in the <style> section */
+        .markup-negative {
+            color: #64b5f6 !important; /* Light blue for negative markup */
+        }
+
+        .markup-low {
+            color: #66bb6a !important; /* Green for 0-20% markup */
+        }
+
+        .markup-medium {
+            color: #ffee58 !important; /* Yellow for 20-30% markup */
+        }
+
+        .markup-high {
+            color: #ff5252 !important; /* Red for above 30% markup */
+        }
+
+        /* Stats card specific versions */
+        .stats-markup-negative {
+            color: #64b5f6 !important; /* Light blue for negative markup */
+        }
+
+        .stats-markup-low {
+            color: #66bb6a !important; /* Green for 0-20% markup */
+        }
+
+        .stats-markup-medium {
+            color: #ffee58 !important; /* Yellow for 20-30% markup */
+        }
+
+        .stats-markup-high {
+            color: #ff5252 !important; /* Red for above 30% markup */
+        }
     </style>
 </head>
 <body>
