--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
                         <option value="markup_percent_asc">Markup % (Lowest First)</option>
                         <option value="price_desc">Price (Highest First)</option>
                         <option value="price_asc">Price (Lowest First)</option>
+                        <option value="jita_sell_value_desc">Jita Value (Highest First)</option>
+                        <option value="jita_sell_value_asc">Jita Value (Lowest First)</option>
                     </select>
                 </div>
             </div>
